examples/type_system/failing/184_type_expr_missing_close_paren.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 2 errors • examples/type_system/failing/184_type_expr_missing_close_paren.flx
// error[E034]: Missing Closing Delimiter
//
// Expected `)` to close tuple type.
//
//   examples/type_system/failing/184_type_expr_missing_close_paren.flx:45:31
//    |
// 45 | fn bad(x: (Int, String -> Int { x }
//    |                               ^
//
// Hint:
//   Tuple types use `(A, B, ...)`.
//
// Note:
//   while parsing function `bad`
//
//
// error[E034]: Missing Function Body
//
// This function body needs to start with `{`.
//
//   examples/type_system/failing/184_type_expr_missing_close_paren.flx:45:35
//    |
// 45 | fn bad(x: (Int, String -> Int { x }
//    |                                   ^
//    |                                   - This looks like the function body
//
//    | - `bad` starts here
//
// Note:
//   while parsing function `bad`
//
// Help:
//   Try adding `{` after the function signature.
//
// Found 2 errors.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034
// expect-error: E034

fn bad(x: (Int, String -> Int { x }
let after = 1
